--- a/src/app/components/common/footer/footer.template.html
+++ b/src/app/components/common/footer/footer.template.html
@@ -1,8 +1,8 @@
 <div class="footer">
   <div class="pull-right">
-    10GB of <strong>250GB</strong> Free.
+    Contributors <strong>Database</strong>
   </div>
   <div>
-    <strong>Copyright</strong> Example Company &copy; 2014-2017
+    <strong>Copyright</strong> OHBD &copy; 2019
   </div>
 </div>
