--- a/src/assets/styles/imports/_navigation.scss
+++ b/src/assets/styles/imports/_navigation.scss
@@ -348,7 +348,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
 }
 
 .navbar-fixed-top, .navbar-static-top {
-  background: $gray;
+  background: #3e91c2;
 }
 
 .fixed-nav #wrapper {
