--- a/src/assets/styles/imports/_top_navigation.scss
+++ b/src/assets/styles/imports/_top_navigation.scss
@@ -22,7 +22,7 @@
 }
 
 .top-navigation .nav > li a:hover, .top-navigation .nav > li a:focus {
-  background: #fff;
+  background: rgb(136, 49, 49);
   color: $navy;
 }
 
