Update Submission Form
Update Submission Form

--- a/src/app/views/appviews/expert.template.html
+++ b/src/app/views/appviews/expert.template.html
@@ -1,20 +1,4 @@
-<div class="container">
-     <div>
-      <form [formGroup]="expertData">
-  
-        <label>
-          Name:
-          <input type="text" formControlName="name">
-        </label>
-      
-        <label>
-          email:
-          <input type="text" formControlName="email">
-        </label>
-        <button type="submit" [disabled]="!creationState">Submit</button>
-      </form>      
-   </div>    
-</div>
+
 <div class="wrapper wrapper-content animated fadeIn">
   <div class="p-w-md m-t-sm">
     <div class="row">
@@ -53,10 +37,59 @@
                 </tbody>
               </table>
             </div>
-
+    
+	
           </div>
+		  <div>
+				
+				 <div class="container">
+				
+				<div class="left-box text-center loginscreen   animated fadeInDown">
+				
+			
+				
+						<div>
+						  	<br>
+						   <p>Please Fill The Expert Form And Click Submit</p>
+							<form class="m-t" role="form" action="login.html" style="display:inline!important;">
+								<div class="form-group">
+									<input type="text" class="form-control" placeholder="Expert Name" required="">
+								</div>
+								<div class="form-group">
+									<input type="email" class="form-control" placeholder="Email" required="">
+								</div>
+								<div class="form-group">
+									<input type="address" class="form-control" placeholder="Address" required="">
+								</div>
+							   
+								<button type="submit" class="btn btn-primary block full-width m-b">Submit</button>
+							</form>
+						  
+							</div>
+				</div>
+		</div>
+		</div> 
+  
+  
+  
+  
+		</div>
+		
+		
+	
+
         </div>
+		
+		
       </div>
     </div>
-  </div> 
+	
+	
+ 
+  
 </div>
+
+
+
+
+	
