--- a/src/assets/styles/imports/_pages.scss
+++ b/src/assets/styles/imports/_pages.scss
@@ -95,13 +95,13 @@
   padding-top: 40px;
 }
 
-.lockscreen.middle-box {
+.lockscreen.left-box {
   width: 200px;
   padding-top: 110px;
 }
 
-.loginscreen.middle-box {
-  width: 300px;
+.loginscreen.left-box {
+  width: 600px;
 }
 
 .loginColumns {
@@ -113,7 +113,7 @@
 .passwordBox {
   max-width: 460px;
   margin: 0 auto;
-  padding: 100px 20px 20px 20px;
+  padding: 100px 20px 80px 20px;
 }
 
 .logo-name {
