--- a/src/assets/styles/imports/_variables.scss
+++ b/src/assets/styles/imports/_variables.scss
@@ -39,4 +39,4 @@ $btn-border-radius: 3px;
 //Navigation
 $nav-bg: #2F4050;
 $nav-profile-pattern: url("#{$asset-path}/header-profile.png");
-$nav-text-color: #a7b1c2;
+$nav-text-color: #b9c2a7;
