--- a/src/app/views/appviews/expert.template.html
+++ b/src/app/views/appviews/expert.template.html
@@ -40,40 +40,89 @@
     
 	
           </div>
-		  <div>
-				
-				 <div class="container">
-				
-				<div class="left-box text-center loginscreen   animated fadeInDown">
-				
-			
-				
-						<div>
-						  	<br>
-						   <p>Please Fill The Expert Form And Click Submit</p>
-							<form class="m-t" role="form" action="login.html" style="display:inline!important;">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Expert Name" required="">
-								</div>
-								<div class="form-group">
-									<input type="email" class="form-control" placeholder="Email" required="">
-								</div>
-								<div class="form-group">
-									<input type="address" class="form-control" placeholder="Address" required="">
-								</div>
-							   
-								<button type="submit" class="btn btn-primary block full-width m-b">Submit</button>
-							</form>
-						  
-							</div>
-				</div>
-		</div>
-		</div> 
+
+  
+  
+  
+<div class="form">
+      
+    
+      <div class="tab-content">
+        <div id="signup">   
+          <h1>Create Expert</h1>
+          
+         
+          
+          <div class="top-row">
+            <div class="field-wrap">
+              <label>
+                First Name<span class="req">*</span>
+              </label>
+              <input type="text" required autocomplete="off" />
+            </div>
+        
+            <div class="field-wrap">
+              <label>
+                Last Name<span class="req">*</span>
+              </label>
+              <input type="text"required autocomplete="off"/>
+            </div>
+          </div>
+
+          <div class="field-wrap">
+            <label>
+              Address<span class="req">*</span>
+            </label>
+            <input type="address"required autocomplete="off"/>
+          </div>
+          
+          <div class="field-wrap">
+            <label>
+              Age<span class="req">*</span>
+            </label>
+            <input type="age"required autocomplete="off"/>
+          </div>
+          
+          <button type="submit" class="button button-block">Submit</button>
+          
+       
+
+        </div>
+        
+        <div id="login">   
+         
+          <form action="/" method="post">
+          
+            <div class="field-wrap">
+            <label>
+              Address Address<span class="req">*</span>
+            </label>
+            <input type="address"required autocomplete="off"/>
+          </div>
+          
+          <div class="field-wrap">
+            <label>
+              Age<span class="req">*</span>
+            </label>
+            <input type="age"required autocomplete="off"/>
+          </div>
+          
+          </form>
+
+        </div>
+        
+      </div><!-- tab-content -->
+      
+</div> <!-- /form -->
+      
+      
+
   
   
   
   
 		</div>
+
 		
 		
 	
