--- a/src/app/views/appviews/expert.template.html
+++ b/src/app/views/appviews/expert.template.html
@@ -55,32 +55,24 @@
           
           <div class="top-row">
             <div class="field-wrap">
-              <label>
-                First Name<span class="req">*</span>
-              </label>
-              <input type="text" required autocomplete="off" />
+            
+              <input type="firstname" placeholder="Enter First Name" />
             </div>
         
             <div class="field-wrap">
-              <label>
-                Last Name<span class="req">*</span>
-              </label>
-              <input type="text"required autocomplete="off"/>
+             
+              <input type="lastname"placeholder="Enter Last Name"/>
             </div>
           </div>
 
           <div class="field-wrap">
-            <label>
-              Address<span class="req">*</span>
-            </label>
-            <input type="address"required autocomplete="off"/>
+            
+            <input type="address"placeholder="Enter Expert Address"/>
           </div>
           
           <div class="field-wrap">
-            <label>
-              Age<span class="req">*</span>
-            </label>
-            <input type="age"required autocomplete="off"/>
+          
+            <input type="age"placeholder="Enter Age"/>
           </div>
           
           <button type="submit" class="button button-block">Submit</button>
