--- a/src/app/views/appviews/expert.template.html
+++ b/src/app/views/appviews/expert.template.html
@@ -40,15 +40,13 @@
     
 	
           </div>
-
-  
   
   
 <div class="form">
       
     
       <div class="tab-content">
-        <div id="signup">   
+        <div id="login">   
           <h1>Create Expert</h1>
           
          
@@ -76,58 +74,30 @@
           </div>
           
           <button type="submit" class="button button-block">Submit</button>
-          
-       
-
         </div>
         
         <div id="login">   
-         
-          <form action="/" method="post">
-          
             <div class="field-wrap">
-            <label>
-              Address Address<span class="req">*</span>
-            </label>
-            <input type="address"required autocomplete="off"/>
+            
+            <input type="address"placeholder="address"/>
           </div>
           
           <div class="field-wrap">
-            <label>
-              Age<span class="req">*</span>
-            </label>
-            <input type="age"required autocomplete="off"/>
-          </div>
           
-          </form>
-
+           
+            <input type="age"placeholder="age"/>
+          </div>
         </div>
         
       </div><!-- tab-content -->
       
 </div> <!-- /form -->
-      
-      
-
-  
-  
-  
-  
 		</div>
-
-		
-		
-	
-
         </div>
 		
 		
       </div>
     </div>
-	
-	
- 
-  
 </div>
 
 
